KStreams avro2proto serialization tutorial
- refactored json2avro tutorial
- experimental tutorial with Java 11